[package]
name = "tube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["stream"]}
futures = "0.3" 
futures-util = "0.3.14"
indicatif = "0.15.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
terminal-menu = "2.0.4"